# fuzzy-regex.rs

./: .gitignore  .travis.yml  COPYING.mkd  Cargo.toml  Makefile  README.md  deny.toml  shell.nix
.github/workflows/: CI.yml
doc/: eternaleye-worked-example.txt
src/: lib.rs
src/err/: mod.rs
src/tests/: mod.rs
